# python-cyapi

./: .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml  setup.py
cyapi/: cyapi.py
cyapi/exclusions/: carbon_black.json  cs_falcon.json  defender.json  mcafee.json  ms_scep.json  sccm.json  sep.json  sophos.json  tanium.json  trend.json
cyapi/mixins/: _Detections.py  _DeviceCommands.py  _Devices.py  _Exceptions.py  _Focus_View.py  _Global_List.py  _InstaQueries.py  _MTC_HealthCheck.py  _MTC_PolicyTemplates.py  _MTC_Reports.py  _MTC_Tenants.py  _MTC_Users.py  _Memory_Protection.py  _Optics_Policies.py  _Packages.py  _Policies.py  _Rules.py  _Rulesets.py  _Threats.py  _Users.py  _Zones.py
cyapi/reqs/: create_policy.json
examples/: MTC_tenants_loop.py  find_stale_devices.py  get_all_detection_detail.py  safelist_trusted_local.py  simple_MTC_setup.py  simple_setup.py  time_getting_all_detection_detail.py
tests/: test_cyapi.py
